infrastructure/identity/base/dex/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dex.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: dex
          port: 5556
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dex.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: dex
          port: 5556
  tls:
    secretName: tls-dex-ingress
